expresso/parser/expressoParser.py
# Generated from expresso.g4 by ANTLR 4.9
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class expressoParser ( Parser ):

    grammarFileName = "expresso.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'def'", "'('", "')'", "'.'", "'class'", 
                     "'{'", "'}'", "'new'", "';'", "'return'", "'='", "'*'", 
                     "'/'", "'%'", "'+'", "'-'", "'>'", "'<'", "'<='", "'>='", 
                     "'=='", "'if'", "'else'", "'while'", "'for'", "'switch'", 
                     "'case'", "':'", "'break'", "','", "'input'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "INPUT", "ID", 
                      "INT", "FLOAT", "STRING", "BOOLEAN", "WS" ]

    RULE_start = 0
    RULE_func_def = 1
    RULE_func_call = 2
    RULE_class_def = 3
    RULE_class_stmt = 4
    RULE_class_stmts = 5
    RULE_class_inst = 6
    RULE_stmt = 7
    RULE_stmts = 8
    RULE_ass = 9
    RULE_exp = 10
    RULE_if_stmt = 11
    RULE_while_stmt = 12
    RULE_for_stmt = 13
    RULE_for_condition = 14
    RULE_for_iteration = 15
    RULE_switch_stmt = 16
    RULE_case_stmt = 17
    RULE_case_stmts = 18
    RULE_break_stmt = 19
    RULE_atm = 20
    RULE_args = 21

    ruleNames =  [ "start", "func_def", "func_call", "class_def", "class_stmt", 
                   "class_stmts", "class_inst", "stmt", "stmts", "ass", 
                   "exp", "if_stmt", "while_stmt", "for_stmt", "for_condition", 
                   "for_iteration", "switch_stmt", "case_stmt", "case_stmts", 
                   "break_stmt", "atm", "args" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    INPUT=31
    ID=32
    INT=33
    FLOAT=34
    STRING=35
    BOOLEAN=36
    WS=37

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def func_def(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(expressoParser.Func_defContext)
            else:
                return self.getTypedRuleContext(expressoParser.Func_defContext,i)


        def class_def(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(expressoParser.Class_defContext)
            else:
                return self.getTypedRuleContext(expressoParser.Class_defContext,i)


        def getRuleIndex(self):
            return expressoParser.RULE_start

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart" ):
                return visitor.visitStart(self)
            else:
                return visitor.visitChildren(self)




    def start(self):

        localctx = expressoParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        self._la = 0 # Token type
        try:
            self.state = 56
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 47
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==expressoParser.T__0:
                    self.state = 44
                    self.func_def()
                    self.state = 49
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 53
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==expressoParser.T__4:
                    self.state = 50
                    self.class_def()
                    self.state = 55
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_defContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(expressoParser.ID, 0)

        def stmts(self):
            return self.getTypedRuleContext(expressoParser.StmtsContext,0)


        def args(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(expressoParser.ArgsContext)
            else:
                return self.getTypedRuleContext(expressoParser.ArgsContext,i)


        def getRuleIndex(self):
            return expressoParser.RULE_func_def

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_def" ):
                return visitor.visitFunc_def(self)
            else:
                return visitor.visitChildren(self)




    def func_def(self):

        localctx = expressoParser.Func_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_func_def)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.match(expressoParser.T__0)
            self.state = 59
            self.match(expressoParser.ID)
            self.state = 60
            self.match(expressoParser.T__1)
            self.state = 64
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << expressoParser.T__1) | (1 << expressoParser.ID) | (1 << expressoParser.INT) | (1 << expressoParser.FLOAT) | (1 << expressoParser.STRING) | (1 << expressoParser.BOOLEAN))) != 0):
                self.state = 61
                self.args()
                self.state = 66
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 67
            self.match(expressoParser.T__2)
            self.state = 68
            self.stmts()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_callContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(expressoParser.ID)
            else:
                return self.getToken(expressoParser.ID, i)

        def args(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(expressoParser.ArgsContext)
            else:
                return self.getTypedRuleContext(expressoParser.ArgsContext,i)


        def getRuleIndex(self):
            return expressoParser.RULE_func_call

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_call" ):
                return visitor.visitFunc_call(self)
            else:
                return visitor.visitChildren(self)




    def func_call(self):

        localctx = expressoParser.Func_callContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_func_call)
        self._la = 0 # Token type
        try:
            self.state = 90
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 70
                self.match(expressoParser.ID)
                self.state = 71
                self.match(expressoParser.T__3)
                self.state = 72
                self.match(expressoParser.ID)
                self.state = 73
                self.match(expressoParser.T__1)
                self.state = 77
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << expressoParser.T__1) | (1 << expressoParser.ID) | (1 << expressoParser.INT) | (1 << expressoParser.FLOAT) | (1 << expressoParser.STRING) | (1 << expressoParser.BOOLEAN))) != 0):
                    self.state = 74
                    self.args()
                    self.state = 79
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 80
                self.match(expressoParser.T__2)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 81
                self.match(expressoParser.ID)
                self.state = 82
                self.match(expressoParser.T__1)
                self.state = 86
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << expressoParser.T__1) | (1 << expressoParser.ID) | (1 << expressoParser.INT) | (1 << expressoParser.FLOAT) | (1 << expressoParser.STRING) | (1 << expressoParser.BOOLEAN))) != 0):
                    self.state = 83
                    self.args()
                    self.state = 88
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 89
                self.match(expressoParser.T__2)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_defContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(expressoParser.ID, 0)

        def args(self):
            return self.getTypedRuleContext(expressoParser.ArgsContext,0)


        def class_stmts(self):
            return self.getTypedRuleContext(expressoParser.Class_stmtsContext,0)


        def getRuleIndex(self):
            return expressoParser.RULE_class_def

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClass_def" ):
                return visitor.visitClass_def(self)
            else:
                return visitor.visitChildren(self)




    def class_def(self):

        localctx = expressoParser.Class_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_class_def)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(expressoParser.T__4)
            self.state = 93
            self.match(expressoParser.ID)
            self.state = 94
            self.match(expressoParser.T__1)
            self.state = 95
            self.args()
            self.state = 96
            self.match(expressoParser.T__2)
            self.state = 97
            self.class_stmts()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ass(self):
            return self.getTypedRuleContext(expressoParser.AssContext,0)


        def func_def(self):
            return self.getTypedRuleContext(expressoParser.Func_defContext,0)


        def getRuleIndex(self):
            return expressoParser.RULE_class_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClass_stmt" ):
                return visitor.visitClass_stmt(self)
            else:
                return visitor.visitChildren(self)




    def class_stmt(self):

        localctx = expressoParser.Class_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_class_stmt)
        try:
            self.state = 101
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [expressoParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 99
                self.ass()
                pass
            elif token in [expressoParser.T__0]:
                self.enterOuterAlt(localctx, 2)
                self.state = 100
                self.func_def()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_stmtsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def class_stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(expressoParser.Class_stmtContext)
            else:
                return self.getTypedRuleContext(expressoParser.Class_stmtContext,i)


        def getRuleIndex(self):
            return expressoParser.RULE_class_stmts

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClass_stmts" ):
                return visitor.visitClass_stmts(self)
            else:
                return visitor.visitChildren(self)




    def class_stmts(self):

        localctx = expressoParser.Class_stmtsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_class_stmts)
        self._la = 0 # Token type
        try:
            self.state = 114
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 103
                self.match(expressoParser.T__5)
                self.state = 107
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==expressoParser.T__0 or _la==expressoParser.ID:
                    self.state = 104
                    self.class_stmt()
                    self.state = 109
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 110
                self.match(expressoParser.T__6)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 111
                self.match(expressoParser.T__5)
                self.state = 112
                self.match(expressoParser.T__6)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_instContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(expressoParser.ID, 0)

        def args(self):
            return self.getTypedRuleContext(expressoParser.ArgsContext,0)


        def getRuleIndex(self):
            return expressoParser.RULE_class_inst

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClass_inst" ):
                return visitor.visitClass_inst(self)
            else:
                return visitor.visitChildren(self)




    def class_inst(self):

        localctx = expressoParser.Class_instContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_class_inst)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(expressoParser.T__7)
            self.state = 117
            self.match(expressoParser.ID)
            self.state = 118
            self.match(expressoParser.T__1)
            self.state = 119
            self.args()
            self.state = 120
            self.match(expressoParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ass(self):
            return self.getTypedRuleContext(expressoParser.AssContext,0)


        def func_call(self):
            return self.getTypedRuleContext(expressoParser.Func_callContext,0)


        def switch_stmt(self):
            return self.getTypedRuleContext(expressoParser.Switch_stmtContext,0)


        def while_stmt(self):
            return self.getTypedRuleContext(expressoParser.While_stmtContext,0)


        def for_stmt(self):
            return self.getTypedRuleContext(expressoParser.For_stmtContext,0)


        def if_stmt(self):
            return self.getTypedRuleContext(expressoParser.If_stmtContext,0)


        def exp(self):
            return self.getTypedRuleContext(expressoParser.ExpContext,0)


        def getRuleIndex(self):
            return expressoParser.RULE_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = expressoParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_stmt)
        try:
            self.state = 136
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 122
                self.ass()
                self.state = 123
                self.match(expressoParser.T__8)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 125
                self.func_call()
                self.state = 126
                self.match(expressoParser.T__8)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 128
                self.switch_stmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 129
                self.while_stmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 130
                self.for_stmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 131
                self.if_stmt()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 132
                self.match(expressoParser.T__9)
                self.state = 133
                self.exp(0)
                self.state = 134
                self.match(expressoParser.T__8)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(expressoParser.StmtContext)
            else:
                return self.getTypedRuleContext(expressoParser.StmtContext,i)


        def getRuleIndex(self):
            return expressoParser.RULE_stmts

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmts" ):
                return visitor.visitStmts(self)
            else:
                return visitor.visitChildren(self)




    def stmts(self):

        localctx = expressoParser.StmtsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_stmts)
        self._la = 0 # Token type
        try:
            self.state = 149
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 138
                self.match(expressoParser.T__5)
                self.state = 142
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << expressoParser.T__9) | (1 << expressoParser.T__21) | (1 << expressoParser.T__23) | (1 << expressoParser.T__24) | (1 << expressoParser.T__25) | (1 << expressoParser.ID))) != 0):
                    self.state = 139
                    self.stmt()
                    self.state = 144
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 145
                self.match(expressoParser.T__6)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 146
                self.match(expressoParser.T__5)
                self.state = 147
                self.match(expressoParser.T__6)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(expressoParser.ID, 0)

        def exp(self):
            return self.getTypedRuleContext(expressoParser.ExpContext,0)


        def class_inst(self):
            return self.getTypedRuleContext(expressoParser.Class_instContext,0)


        def func_call(self):
            return self.getTypedRuleContext(expressoParser.Func_callContext,0)


        def getRuleIndex(self):
            return expressoParser.RULE_ass

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAss" ):
                return visitor.visitAss(self)
            else:
                return visitor.visitChildren(self)




    def ass(self):

        localctx = expressoParser.AssContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_ass)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.match(expressoParser.ID)
            self.state = 152
            self.match(expressoParser.T__10)
            self.state = 156
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.state = 153
                self.exp(0)
                pass

            elif la_ == 2:
                self.state = 154
                self.class_inst()
                pass

            elif la_ == 3:
                self.state = 155
                self.func_call()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(expressoParser.ExpContext)
            else:
                return self.getTypedRuleContext(expressoParser.ExpContext,i)


        def atm(self):
            return self.getTypedRuleContext(expressoParser.AtmContext,0)


        def getRuleIndex(self):
            return expressoParser.RULE_exp

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExp" ):
                return visitor.visitExp(self)
            else:
                return visitor.visitChildren(self)



    def exp(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = expressoParser.ExpContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 20
        self.enterRecursionRule(localctx, 20, self.RULE_exp, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 164
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [expressoParser.T__1]:
                self.state = 159
                self.match(expressoParser.T__1)
                self.state = 160
                self.exp(0)
                self.state = 161
                self.match(expressoParser.T__2)
                pass
            elif token in [expressoParser.ID, expressoParser.INT, expressoParser.FLOAT, expressoParser.STRING, expressoParser.BOOLEAN]:
                self.state = 163
                self.atm()
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 198
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,16,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 196
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
                    if la_ == 1:
                        localctx = expressoParser.ExpContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_exp)
                        self.state = 166
                        if not self.precpred(self._ctx, 12):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 12)")
                        self.state = 167
                        self.match(expressoParser.T__11)
                        self.state = 168
                        self.exp(13)
                        pass

                    elif la_ == 2:
                        localctx = expressoParser.ExpContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_exp)
                        self.state = 169
                        if not self.precpred(self._ctx, 11):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 11)")
                        self.state = 170
                        self.match(expressoParser.T__12)
                        self.state = 171
                        self.exp(12)
                        pass

                    elif la_ == 3:
                        localctx = expressoParser.ExpContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_exp)
                        self.state = 172
                        if not self.precpred(self._ctx, 10):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 10)")
                        self.state = 173
                        self.match(expressoParser.T__13)
                        self.state = 174
                        self.exp(11)
                        pass

                    elif la_ == 4:
                        localctx = expressoParser.ExpContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_exp)
                        self.state = 175
                        if not self.precpred(self._ctx, 9):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 9)")
                        self.state = 176
                        self.match(expressoParser.T__14)
                        self.state = 177
                        self.exp(10)
                        pass

                    elif la_ == 5:
                        localctx = expressoParser.ExpContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_exp)
                        self.state = 178
                        if not self.precpred(self._ctx, 8):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 8)")
                        self.state = 179
                        self.match(expressoParser.T__15)
                        self.state = 180
                        self.exp(9)
                        pass

                    elif la_ == 6:
                        localctx = expressoParser.ExpContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_exp)
                        self.state = 181
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 182
                        self.match(expressoParser.T__16)
                        self.state = 183
                        self.exp(8)
                        pass

                    elif la_ == 7:
                        localctx = expressoParser.ExpContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_exp)
                        self.state = 184
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 185
                        self.match(expressoParser.T__17)
                        self.state = 186
                        self.exp(7)
                        pass

                    elif la_ == 8:
                        localctx = expressoParser.ExpContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_exp)
                        self.state = 187
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 188
                        self.match(expressoParser.T__18)
                        self.state = 189
                        self.exp(6)
                        pass

                    elif la_ == 9:
                        localctx = expressoParser.ExpContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_exp)
                        self.state = 190
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 191
                        self.match(expressoParser.T__19)
                        self.state = 192
                        self.exp(5)
                        pass

                    elif la_ == 10:
                        localctx = expressoParser.ExpContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_exp)
                        self.state = 193
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 194
                        self.match(expressoParser.T__20)
                        self.state = 195
                        self.exp(4)
                        pass

             
                self.state = 200
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,16,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class If_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.cond = None # ExpContext
            self.then = None # StmtsContext
            self.otherwise = None # StmtsContext

        def exp(self):
            return self.getTypedRuleContext(expressoParser.ExpContext,0)


        def stmts(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(expressoParser.StmtsContext)
            else:
                return self.getTypedRuleContext(expressoParser.StmtsContext,i)


        def getRuleIndex(self):
            return expressoParser.RULE_if_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf_stmt" ):
                return visitor.visitIf_stmt(self)
            else:
                return visitor.visitChildren(self)




    def if_stmt(self):

        localctx = expressoParser.If_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_if_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 201
            self.match(expressoParser.T__21)
            self.state = 202
            localctx.cond = self.exp(0)
            self.state = 203
            localctx.then = self.stmts()
            self.state = 206
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==expressoParser.T__22:
                self.state = 204
                self.match(expressoParser.T__22)
                self.state = 205
                localctx.otherwise = self.stmts()

